@@ -1,9 +1,14 @@
 These are the Release Notes for post-revision 2.4.5 of netperf:
 
+*) Add global -s option to cause omni tests to pause between
+   setting-up the test and actually starting it.  pause is in seconds.
+   Poor man's way to (attempt to) avoid issues when starting many,
+   Many, MANY concurrent netperf tests. Based on patches from Google.
+
 *) Additional timing statistics will be kept by the omni tests when
    the global "-j" option is specified.  The additional statistics are
    min, max, mean, stddev and the 50th, 90th and 99th percentiles on
-   the timings measured by histograms.
+   the timings measured by histograms. Based on patches from Google.
 
 *) Add a workaround to get Linux to report TX queue drops in a
    UDP_STREAM test when the socket buffer size is larger than the
